# robocar-protobuf

./: .gitignore  Makefile  README.md
events/: events.proto
go/: go.mod
go/events/: events.pb.go
python/: README.md  pyproject.toml  setup.py
python/events/: events_pb2.py  events_pb2.pyi
